--- a/tool/fp-aframe.html
+++ b/tool/fp-aframe.html
@@ -8,8 +8,8 @@
 
 
 
-      <a-sky color=#6e99fe ></a-sky>
-      <a-camera position="0 5 20"></a-camera>
+      <a-sky color= #012348 ></a-sky>
+      <a-camera position="0 5 10"></a-camera>
 
 
       <!-- <a-box position="-1 15 -3" height="9" depth="10" width="9" color=lightgreen> </a-box>
