--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             }
 
             h5, .h5 {
-              font-size: calc(1.275rem + 0.3vw);
+              font-size: 3vw;
               padding: 15px;
               color: #bdfff1;
             }
@@ -52,7 +52,7 @@
             p {
                 margin-top: 0;
                 margin-bottom: 1rem;
-                font-size: 1rem;
+                font-size: 2.5vw;
                 font-family: "Oswald", sans-serif;
                 color: #FFF;
                 padding: 10px;
@@ -391,7 +391,7 @@
                           <li> Gives users activities and games to help them achieve their goals. </li>
                           <li> Helps users improve their emotional well-being and reduce their stress. </li>
                         </ul>
-                        <img src="prep/moodtools.png" class="card-img-top" alt="..."/>
+                        <img src="prep/moodtools.png" class="card-img-top rounded" alt="..."/>
                       </div>
                     </div>
 
@@ -403,7 +403,7 @@
                           <li> Teaches users how to meditate </li>
                           <li> Can use at anytime, even offline </li>
                         </ul>
-                        <img src="prep/happify.png" class="card-img-top" alt="..."/>
+                        <img src="prep/happify.png" class="card-img-top rounded" alt="..."/>
                       </div>
                     </div>
 
