--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
                   <h1 class="text-center"> Future Technology </h1>
 
-                  <div class="container text-center">
+                  <div class="text-center">
                     <div class="row col-12">
 
 
@@ -435,7 +435,7 @@
 
 
                       <!-- Idea-2 -->
-                      <div class="col-md-4 col-sm-8 col-xs-12">
+                      <div class=" col-md-4 col-sm-8 col-xs-12">
 
                         <h2 class="text-center"> Future App </h2>
 
