--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
 
                       <!-- Idea-1 -->
-                      <div class="col-md-6 col-sm-8 col-xs-12">
+                      <div class=" border col-md-6 col-sm-8 col-xs-12">
                         <h2 class="text-center"> AI face recognition </h2>
                           <ul>
                             <li>Camera with an AI that will recognize your facial expressions and determine your mood.</li>
@@ -435,7 +435,7 @@
 
 
                       <!-- Idea-2 -->
-                      <div class=" col-md-4 col-sm-8 col-xs-12">
+                      <div class="border col-md-4 col-sm-8 col-xs-12">
 
                         <h2 class="text-center"> Future App </h2>
 
