--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             h4, .h4 {
               font-size: calc(1.275rem + 0.3vw);
               padding: 15px;
-              color: #bdfff1;
+              color: #56ffc4;
             }
 
             h5, .h5 {
@@ -59,7 +59,9 @@
               }
 
               .purple{
-                    background: #8c99d7 !important;
+                    background: rgba(140,153,215,0) !important;
+                    color: #56ffc4;
+                    font-family: "Oswald", sans-serif;
                     }
 
               .small-text {
@@ -157,6 +159,8 @@
 
 
 
+
+
         </style>
 
         <title> Mental-Health-Care </title>
@@ -218,7 +222,7 @@
     </section>
 
     <!-- Part A -->
-    <section class="green" id="etech">
+    <section class="ggreen" id="etech">
         <div class="masthead-content">
             <div class="container px-5">
                 <header class="text-center">
@@ -227,9 +231,9 @@
               </section>
 
 
-              <section class="green">
+              <section class="ggreen">
                 <div class="accordion accordion-flush" id="a">
-                  <div class="accordion-item green">
+                  <div class="accordion-item ggreen">
 
                     <h3 class=" text-center accordion-header" id="flush-headingOne">
                       <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -246,7 +250,7 @@
 
                 </section>
 
-                <section class="green">
+                <section class="ggreen">
 
                 <!-- Carousel -->
 
@@ -273,7 +277,7 @@
                               <div class="card-body">
                             <h5 class=" text-center card-title">Smartwatch</h5>
                             <p class="card-text text-center text-white text-md-start"> A wearable device that gives you easy access to mental health care apps. </p>
-                            <img src="prep/swatch.webp" class="card-img-bottom rounded" alt="...">
+                            <img src="prep/swatch.jpg" class="card-img-bottom rounded" alt="...">
                           </div>
                         </div>
                       </div>
@@ -305,10 +309,10 @@
                   <!-- Simulations -->
 
                   <!-- button -->
-                  <section class="ggreen">
+                  <section class="darkblue">
 
                     <div class="accordion accordion-flush"  id="a">
-                      <div class="accordion-item ggreen">
+                      <div class="accordion-item darkblue">
 
                         <h3 class=" text-center accordion-header" id="flush-headingOne">
                           <button class=" purple btn-lg collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -328,8 +332,8 @@
 
 
 
-                 <section class="ggreen">
-                  <h4 class="text-center text-decoration-underline"> Virtual Reality Therapy (VRT) </h4>
+                 <section class="darkblue">
+                  <h4 class="text-center"> Virtual Reality Therapy (VRT) </h4>
                   <p class="text-center small-text text-white"> VRT uses a virtual world to help people treat their anxiety disorders, phobias, and post-traumatic stress disorder (PTSD).</p>
                   <img src="prep/vrt.jpg" class="rounded mx-auto d-block" alt="..."/>
                 </section>
@@ -337,8 +341,8 @@
 
 
                 <!-- cards -->
-                <section class="ggreen">
-                  <h4 class="text-center text-decoration-underline"> Prescription Video Games </h4>
+                <section class="darkblue">
+                  <h4 class="text-center"> Prescription Video Games </h4>
                   <p class="text-center small-text text-white"> Videogames that are used to treat mental conditions. </p>
 
                   <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -435,7 +439,7 @@
 
 
                       <!-- Idea-2 -->
-                      <div class="border col-md-4 col-sm-8 col-xs-12">
+                      <div class="border col-md-6 col-sm-8">
 
                         <h2 class="text-center"> Future App </h2>
 
